# agent-v1

./: README.md  flow.txt
agentic_ai_local/: .env.example  README.md  pyproject.toml  requirements.txt
agentic_ai_local/app/: cli.py  config.py  main.py
agentic_ai_local/app/agents/: code_generator_agent.py  code_validator_agent.py  debug_agent.py  dom_agent.py  executor_agent.py  locator_agent.py  observer_agent.py  planner_agent.py  report_agent.py  requirement_agent.py  test_plan_agent.py
agentic_ai_local/app/graph/: builder.py  conditions.py  nodes.py  router.py  state.py
agentic_ai_local/app/llm/: local_llm.py  structured.py
agentic_ai_local/app/memory/: memory_store.py
agentic_ai_local/app/prompts/: test_plan_prompt.py
agentic_ai_local/app/schemas/: agent_plan.py  dom.py  execution.py  generated_code.py  locator.py  observation.py  report.py  requirement.py  test_plan.py
agentic_ai_local/app/tools/: browser_tool.py  dom_extractor.py  file_tool.py  python_validator.py  safety_tool.py  selenium_runner.py
agentic_ai_local/app/utils/: agent_logging.py  json_utils.py  logging.py  paths.py
agentic_ai_local/tests/: test_browser_tool.py  test_cli.py  test_code_generator_agent.py  test_llm_only_agents.py  test_locator_agent.py  test_plan_validator.py  test_router.py  test_schema_validation.py  test_test_plan_agent.py
docs/agents/: README.txt  code_generator.txt  code_validator.txt  debug.txt  dom.txt  executor.txt  fine_tuning.txt  locator.txt  observer.txt  planner.txt  report.txt  requirement.txt  test_plan.txt
