[project]
name = "agentic-ai-local"
version = "0.1.0"
description = "Local-first dynamic multi-agent Selenium automation framework"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.2.0", "langgraph>=0.2.0", "langchain-ollama>=0.1.0", "pydantic>=2.7.0",
  "python-dotenv>=1.0.0", "rich>=13.7.0", "typer>=0.12.0", "selenium>=4.20.0",
  "webdriver-manager>=4.0.0", "beautifulsoup4>=4.12.0", "lxml>=5.0.0"
]
[project.optional-dependencies]
test = ["pytest>=8.0.0"]
[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
